--- a/source/index.html
+++ b/source/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <base href="/">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>JMP Trucking HO</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <base href="/">
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <title>JMP Trucking HO</title>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+  <link href="/images/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+  <link href="/images/apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+  <link href="/images/apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+  <link href="/images/apple-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="/images/apple-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+  <link href="/images/apple-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="/images/apple-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+  <link href="/images/apple-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <link href="/images/apple-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/images/android-icon-192x192.png" rel="icon" sizes="192x192" type="image/png">
+  <link href="/images/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="/images/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png">
+  <link href="/images/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="/manifest.json" rel="manifest">
+  <meta content="#ffffff" name="msapplication-TileColor">
+  <meta content="images/ms-icon-144x144.png" name="msapplication-TileImage">
+  <meta content="#ffffff" name="theme-color">
 
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-    <script src="https://cdn.auth0.com/js/auth0/9.12.2/auth0.min.js"></script>
-    <script src="https://cdn.auth0.com/js/lock/11.22.1/lock.min.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/9.12.2/auth0.min.js"></script>
+  <script src="https://cdn.auth0.com/js/lock/11.22.1/lock.min.js"></script>
 </head>
 <body class="hold-transition skin-purple sidebar-mini">
-    <app class="wrapper"></app>
+<app class="wrapper"></app>
 </body>
 </html>
